# openhantek

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
cmake/: Findlibusb.cmake
libDemoDevice/: CMakeLists.txt  deviceDemo.h  sineWaveDevice.cpp
libHantekDSO/: CMakeLists.txt  control.cpp  control.h  device.cpp  device.h  dsocontrol.cpp  dsocontrol.h  error_strings.cpp  error_strings.h  types.cpp  types.h
libOpenHantek/: CMakeLists.txt  hantekDevice.cpp  hantekDevice.h  hantekDeviceSamples.cpp  hantekDeviceTrigger.cpp  init.cpp  protocol.cpp  protocol.h  protocolBulk.h  protocolControl.h
libOpenHantek2xxx-5xxx/: CMakeLists.txt  hantekDevice.cpp  hantekDevice.h  hantekDeviceAcquisition.cpp  hantekDeviceSamples.cpp  hantekDeviceTrigger.cpp  init.cpp  init.h  protocol.cpp  protocol.h  protocolBulk.h  protocolControl.h
libOpenHantek60xx/: CMakeLists.txt  HT6022.c  HT6022.h  HT6022BEfw.h  HT6022BLfw.h  hantekDevice.cpp  hantekDevice.h  init.cpp
libPostprocessingDSO/: CMakeLists.txt  dataAnalyzer.cpp  dataAnalyzer.h  dataAnalyzerSettings.h
libusbDSO/: CMakeLists.txt  deviceBase.cpp  deviceBase.h  deviceBaseCommands.cpp  deviceBaseCommands.h  deviceBaseSamples.cpp  deviceBaseSamples.h  deviceBaseSpecifications.cpp  deviceBaseSpecifications.h  deviceDescriptionEntry.h  deviceList.cpp  deviceList.h  dsoSettings.h  dsoSpecification.h  errorcodes.h  usbCommunication.cpp  usbCommunication.h  usbCommunicationQueues.cpp  usbCommunicationQueues.h
libusbDSO/utils/: containerStream.h  stdStringSplit.h  stdstringsplit.cpp  timestampDebug.h  transferBuffer.cpp  transferBuffer.h
openhantek/: CMakeLists.txt
openhantek/src/: OpenHantekMainWindow.cpp  OpenHantekMainWindow.h  configpages.h  dataanalyzer.h  dockwindows.cpp  dockwindows.h  dsostrings.cpp  dsostrings.h  dsowidget.cpp  dsowidget.h  exporter.cpp  exporter.h  glgenerator.cpp  glgenerator.h  glscope.cpp  helper.cpp  helper.h  main.cpp  parameters.cpp  parameters.h  settings.cpp  settings.h
openhantek/src/preferences/: configpages.cpp
openhantek/src/translations/: dsoerrorstrings.cpp  dsoerrorstrings.h  dsostrings.cpp  dsostrings.h
openhantek/src/widgets/: colorbox.cpp  levelslider.cpp  levelslider.h  sispinbox.cpp  sispinbox.h
openhantek2/: CMakeLists.txt
openhantek2/src/: currentdevice.cpp  currentdevice.h  exporter.cpp  exporter.h  main.cpp  modeldatasetter.cpp  parameters.h  scopecolors.cpp  scopecolors.h
openhantek2/ui/: DeviceList.qml  ExpandableItem.qml  ExportDialog.qml  MainForm.ui.qml  PlotterItem.qml  ScopeSettingsDialog.qml  SpectrumItem.qml  VoltageItem.qml  main.qml  qml.qrc
openhantek2/ui/QuickPlot/: Axes.qml  AxisLabels.qml  PlotArea.qml  Tick.qml
